# mdt-dialout-collector

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  centos_INSTALL.md  configure.ac  coverage.json  debian_INSTALL.md  grpc-collector.pc.in  install.sh
.github/workflows/: ci.yaml  coverage.yml  mdt_dialout_collector_compile.yml  release.yml
config_m4/: debug.m4  versioning.m4
configs/: vim
csv/: README.md
doc/: CONFIG-KEYS  Changelog  Dependencies  INSTALL-FROM-SOURCE.md  INSTALL.md  Integration-with-pmtelemetryd.md  integration-with-pmtelemetryd.md  network-devices-conf-snip.md
doc/Deprecated/: README.md  centos_INSTALL.md  debian_INSTALL.md
docker/: Dockerfile
docker/scripts/: grpc.sh  mdt_dialout_collector.conf  mdt_dialout_collector.sh
pkg/: mdt-dialout-collector.service  mdt_dialout_collector.conf.example  nfpm.library.yaml  nfpm.standalone.yaml
pkg/man/: mdt_dialout_collector.1
pkg/scripts/: lib-postinstall.sh  lib-postremove.sh  postinstall.sh  postremove.sh  preremove.sh
pkg/validate/: library-link.c  library.c  library.sh  minimal.conf  standalone.sh
proto/: Makefile.am  hua_dialout.proto  mdt_dialout.proto  mdt_dialout.proto.custom  mdt_dialout.proto.orig  mdt_dialout_cisco.proto  telemetry.proto  telemetry.proto.orig
proto/Cisco/: cisco_dialout.proto  cisco_telemetry.proto
proto/Huawei/: huawei_dialout.proto  huawei_telemetry.proto
proto/Juniper/: GnmiJuniperTelemetryHeaderExtension.proto  juniper_dialout.proto  juniper_gnmi.proto  juniper_telemetry.proto  juniper_telemetry_header.proto  juniper_telemetry_header_extension.proto
proto/Nokia/: nokia_dialout.proto  nokia_gnmi.proto  nokia_gnmi_ext.proto
proto/OpenConfig/: openconfig_interfaces.proto
ptm/: README.md
src/: Makefile.am  mdt-dialout-collector.cc  mdt_dialout_collector.cc  mdt_dialout_core.cc  mdt_dialout_core.h  pmtelemetryd.c  pmtelemetryd.cc
src/bridge/: Makefile.am  bridge_lib.cc  bridge_lib.h  grpc_collector_bridge.cc  grpc_collector_bridge.h
src/cfgWrapper/: Makefile.am  cfg_wrapper.cc  cfg_wrapper.h
src/core/: Makefile.am  mdt_dialout_core.cc  mdt_dialout_core.h
src/dataDelivery/: Makefile.am  data_delivery.cc  data_delivery.h  kafka_delivery.cc  kafka_delivery.h  zmq_delivery.cc  zmq_delivery.h
src/dataManipulation/: Makefile.am  data_manipulation.cc  data_manipulation.h
src/dataWrapper/: Makefile.am  data_wrapper.cc  data_wrapper.h
src/include/grpc/: socket_mutator.h
src/libs/: libraries.cc  libraries.h
src/proto/: Makefile.am  mdt_dialout.grpc.pb.cc  mdt_dialout.grpc.pb.h  mdt_dialout.pb.cc  mdt_dialout.pb.h  mdt_dialout_cisco.grpc.pb.cc  mdt_dialout_cisco.grpc.pb.h  mdt_dialout_cisco.pb.cc  mdt_dialout_cisco.pb.h  telemetry.grpc.pb.cc  telemetry.grpc.pb.h  telemetry.pb.cc  telemetry.pb.h
src/proto/Cisco/: README.md  cisco_dialout.grpc.pb.cc  cisco_dialout.grpc.pb.h  cisco_dialout.pb.cc  cisco_dialout.pb.h  cisco_telemetry.grpc.pb.cc  cisco_telemetry.grpc.pb.h  cisco_telemetry.pb.cc  cisco_telemetry.pb.h
src/proto/Huawei/: README.md  huawei_dialout.grpc.pb.cc  huawei_dialout.grpc.pb.h  huawei_dialout.pb.cc  huawei_dialout.pb.h  huawei_telemetry.grpc.pb.cc  huawei_telemetry.grpc.pb.h  huawei_telemetry.pb.cc  huawei_telemetry.pb.h
src/proto/Juniper/: README.txt
src/proto/Nokia/: README.md
src/proto/OpenConfig/: README.txt
src/tests/: README.md  zmq_pull.cc
src/utils/: Makefile.am  cfg_handler.cc  cfg_handler.h  logs_handler.cc  logs_handler.h  peer_parser.cc  peer_parser.h
tests/: CMakeLists.txt  run_in_container.sh  syntax_check_in_container.sh
tests/e2e/: run.sh
tests/e2e/client/: Containerfile  send_cisco.py  send_huawei.py  send_juniper.py  send_nokia.py
tests/e2e/collector/: Containerfile  Containerfile.next  Containerfile.pkg  Containerfile.tls  mdt_dialout_collector.conf  mdt_dialout_collector.ipv6.conf  mdt_dialout_collector.tls.conf
tests/e2e/pmtelemetryd/: Containerfile  grpc-dialout.conf  kafka.conf  pmtelemetryd.conf
tests/tools/: README.md  zmq_pull.cc
tests/unit/: cfg_test_common.h  test_data_manipulation_cfg.cc  test_kafka_cfg.cc  test_kafka_ssl_default.cc  test_logs_cfg.cc  test_logs_handler.cc  test_main_cfg.cc  test_peer_parser.cc  test_zmq_cfg.cc
